add-ons/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"  
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.my.k8s
    secretName: grafana-certs
  rules:
  - host: grafana.my.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
